Update button styles and loading overlay layout
Refactor button styles and loading overlay layout.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
   .btn.primary{background:var(--accent-secondary); color:#fff; border:none}
   .btn.primary:hover{background:var(--accent-secondary-dark)}
   .btn-chip{padding:.42rem .65rem; font-size:.92rem}
-  .btn.active{background:var(--accent-primary); color:#fff; border-color:#2a7bd5}
+  .btn.active{background:var(--accent-primary); color:#fff; border-color:var(--accent-primary)}
 
   .upload-block{padding:12px;border:1px dashed var(--panel-border);border-radius:12px;background:var(--input-bg)}
-  .thumb-area{width:100%} /* 스크롤바 제거: overflow 제거 */
+  .thumb-area{overflow:auto;width:100%}
   .thumb-grid{
     display:grid;
     grid-template-columns: repeat(6, var(--thumb-size));
@@ -123,32 +123,37 @@
   .box h4{margin:0 0 8px}
   canvas{max-width:100%;border:1px dashed var(--panel-border);border-radius:10px;background:transparent}
 
-  /* 로딩 오버레이 (요청 반영: GIF 크게, 문구는 GIF 아래) */
+  /* 로딩 오버레이 */
   #loadingOverlay{
     position:fixed; inset:0; display:none;
     align-items:center; justify-content:center;
     background:rgba(0,0,0,.35); z-index:9999; backdrop-filter:blur(1.5px);
-    /* 추가 */
-    flex-direction:column; text-align:center; padding:16px;
+    /* ▼ 추가: GIF를 위, 문구를 아래로 세로 배치 */
+    flex-direction:column;
+    text-align:center;
+    padding:16px;
   }
   #loadingOverlay.show{display:flex}
+
+  /* GIF 크게 (400×268 기준), 비율 유지 */
   #loadingGif{
-    width:400px;              /* 400×268 기준 */
+    width:400px;
     height:auto;
-    aspect-ratio:400/268;     /* 비틀림 방지 */
-    max-width:min(90vw,420px);
+    aspect-ratio:400/268;
+    max-width:min(90vw, 420px);
     object-fit:contain;
     image-rendering:auto;
-    margin-bottom:12px;       /* 아래 문구와 간격 */
+    margin-bottom:12px; /* 아래 문구와 간격 */
   }
+
+  /* 문구: GIF 아래 배치 */
   #loadingText{
     font-weight:800;
-    margin:0;                 /* 좌우 여백 제거, 위 간격은 GIF에서 처리 */
   }
 
   @media (max-width:640px){
     body{padding:1rem}
-    #editor-sheet{flex-direction:column;gap:1.6rem} /* 모바일 수직 + 간격 약간 증가 */
+    #editor-sheet{flex-direction:column;gap:1.3rem}
     .settings-panel,.results-panel{width:100%;min-width:unset;max-width:none}
     .app-header{padding:1rem; padding-top:4rem; border-radius:0 0 16px 16px}
     .version-info{right:1rem; font-size:.7rem; display:flex; flex-direction:column; align-items:flex-end}
@@ -194,37 +199,37 @@
           <div class="panel-header"><h2>업로드 및 옵션</h2></div>
 
           <div class="upload-block">
-            <div class="input-group" style="margin-bottom:1.0rem">
+            <div class="input-group" style="margin-bottom:.4rem">
               <label for="fileInput">이미지 업로드</label>
               <div class="input-wrapper">
                 <input id="fileInput" type="file" multiple accept="image/*" />
               </div>
-              <div class="small" style="margin-top:.7rem">드래그로 순서 변경 · ↻ 회전 · ❌ 삭제 · 이름정렬</div>
-              <div style="display:flex;gap:.6rem;margin-top:.8rem;flex-wrap:wrap">
+              <div class="small" style="margin-top:.45rem">드래그로 순서 변경 · ↻ 회전 · ❌ 삭제 · 이름정렬</div>
+              <div style="display:flex;gap:.5rem;margin-top:.6rem;flex-wrap:wrap">
                 <button id="sortAsc" class="btn btn-chip">이름순</button>
                 <button id="sortDesc" class="btn btn-chip">이름 역순</button>
                 <button id="clearAll" class="btn btn-chip">모두 지우기</button>
               </div>
             </div>
 
-            <div class="thumb-area" style="margin-top:1rem">
+            <div class="thumb-area">
               <div id="thumbContainer" class="thumb-grid"></div>
             </div>
           </div>
 
           <hr class="divider" />
 
-          <div class="input-group" style="margin-bottom:1.0rem">
+          <div class="input-group" style="margin-bottom:.8rem">
             <label>합치기 방향</label>
-            <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:.3rem">
+            <div style="display:flex;gap:.5rem;flex-wrap:wrap">
               <button class="btn btn-chip orientBtn active" data-orient="vertical">세로로 합치기</button>
               <button class="btn btn-chip orientBtn" data-orient="horizontal">가로로 합치기</button>
             </div>
           </div>
 
-          <div class="input-group" style="margin-bottom:1.0rem">
+          <div class="input-group" style="margin-bottom:.8rem">
             <label>가로 크기</label>
-            <div style="display:flex;flex-wrap:wrap;gap:.6rem;margin-top:.3rem">
+            <div style="display:flex;flex-wrap:wrap;gap:.5rem">
               <button class="btn btn-chip widthBtn active" data-width="auto">자동 (가장 큰 사진에 맞춤)</button>
               <button class="btn btn-chip widthBtn" data-width="720">720</button>
               <button class="btn btn-chip widthBtn" data-width="1280">1280 (추천)</button>
@@ -232,23 +237,23 @@
               <button class="btn btn-chip widthBtn" data-width="2560">2560</button>
               <button class="btn btn-chip widthBtn" data-width="3840">3840</button>
             </div>
-            <div class="input-wrapper" style="margin-top:.7rem">
+            <div class="input-wrapper" style="margin-top:.5rem">
               <input id="customWidth" type="number" placeholder="직접 입력(px)" />
             </div>
-            <div class="small" id="sizeHint" style="margin-top:.4rem">세로 합치기: 폭 기준 · 가로 합치기: 높이 기준</div>
+            <div class="small" id="sizeHint">세로 합치기: 폭 기준 · 가로 합치기: 높이 기준</div>
           </div>
 
-          <div class="input-group" style="margin-bottom:1.0rem">
+          <div class="input-group" style="margin-bottom:.8rem">
             <label>배치 방식</label>
-            <div style="display:flex;gap:.6rem;flex-wrap:wrap;margin-top:.3rem">
+            <div style="display:flex;gap:.5rem;flex-wrap:wrap">
               <button class="btn btn-chip layoutBtn active" data-layout="scale">비율 유지 (기준 크기에 맞춰 자동 스케일)</button>
               <button class="btn btn-chip layoutBtn" data-layout="pad">패딩 맞춤 (원본 크기 보존, 여백 채우기)</button>
             </div>
           </div>
 
-          <div id="padOptions" class="input-group hidden" style="margin-bottom:1.0rem">
+          <div id="padOptions" class="input-group hidden" style="margin-bottom:.8rem">
             <label>정렬 · 배경</label>
-            <div style="display:flex; gap:.6rem; flex-wrap:wrap; margin-top:.3rem">
+            <div style="display:flex; gap:.5rem; flex-wrap:wrap">
               <div class="input-wrapper" style="min-width:140px">
                 <select id="padAlign">
                   <option value="start">좌/상</option>
@@ -266,34 +271,34 @@
             </div>
           </div>
 
-          <div class="input-group" style="margin-bottom:1.0rem">
+          <div class="input-group" style="margin-bottom:.8rem">
             <label for="gapInput">이미지 간격</label>
-            <div class="input-wrapper" style="margin-top:.3rem">
+            <div class="input-wrapper">
               <input id="gapInput" type="number" value="0"/><span style="padding:0 12px;color:var(--text-secondary)">px</span>
             </div>
           </div>
 
           <div class="input-group">
             <label>출력 형식</label>
-            <div style="display:flex; gap:.6rem; flex-wrap:wrap; margin-top:.3rem">
+            <div style="display:flex; gap:.5rem; flex-wrap:wrap">
               <button class="btn btn-chip fmtBtn active" data-format="image/jpeg">JPEG</button>
               <button class="btn btn-chip fmtBtn" data-format="image/png">PNG</button>
             </div>
           </div>
-          <div id="jpegQualityRow" class="input-group" style="margin-top:.7rem">
+          <div id="jpegQualityRow" class="input-group" style="margin-top:.6rem">
             <label for="qualityInput">JPEG 품질</label>
-            <div class="input-wrapper" style="margin-top:.3rem">
+            <div class="input-wrapper">
               <input id="qualityInput" type="number" min="50" max="100" step="1" value="100"/><span style="padding:0 12px;color:var(--text-secondary)">%</span>
             </div>
           </div>
 
           <hr class="divider" />
 
-          <div style="display:flex; gap:.7rem; flex-wrap:wrap">
+          <div style="display:flex; gap:.6rem; flex-wrap:wrap">
             <button id="mergeBtn" class="btn primary">이미지 합치기</button>
             <button id="downloadBtn" class="btn" disabled>다운로드</button>
           </div>
-          <div id="statusLine" class="small" style="margin-top:.8rem"></div>
+          <div id="statusLine" class="small" style="margin-top:.6rem"></div>
         </section>
 
         <!-- 우측 -->
@@ -304,16 +309,16 @@
           </div>
 
           <!-- 미리보기 위 예상 용량 -->
-          <div id="estLine" class="small" style="margin:-.35rem 0 .8rem 0"></div>
+          <div id="estLine" class="small" style="margin:-.35rem 0 .6rem 0"></div>
 
           <!-- 1) 축소 미리보기 먼저 -->
-          <div class="box" style="margin-bottom:1rem">
+          <div class="box">
             <h4>축소 미리보기</h4>
             <canvas id="previewSmall"></canvas>
           </div>
 
           <!-- 2) 큰 미리보기 다음 -->
-          <div class="box">
+          <div class="box" style="margin-top:1rem">
             <h4>큰 미리보기 (세로 최대 10,000px)</h4>
             <canvas id="previewLarge"></canvas>
           </div>
@@ -390,6 +395,7 @@
 
   const MAX_TOTAL_MB=300;
   const PREVIEW_MAX_H=10000;
+  const SLICE_SRC_H=1024;
 
   let images=[];                    // {src,name,rotation}
   let orient='vertical';
@@ -414,12 +420,7 @@
       ? '세로 합치기: 폭을 기준으로 스케일합니다'
       : '가로 합치기: 높이를 기준으로 스케일합니다';
   }
-  function drawEmptyPreviews(){
-    previewLarge.width=1; previewLarge.height=1;
-    previewSmall.width=1; previewSmall.height=1;
-    estLine.textContent=''; infoLine.textContent='';
-    downloadBtn.disabled=true;
-  }
+  function drawEmptyPreviews(){ previewLarge.width=1; previewLarge.height=1; previewSmall.width=1; previewSmall.height=1; estLine.textContent=''; infoLine.textContent=''; downloadBtn.disabled=true; }
 
   fileInput.addEventListener('change',()=>{
     const files=Array.from(fileInput.files||[]);
@@ -524,6 +525,9 @@
         });
       }
       const placements=[]; let totalW=baseW, y=0;
+      for(const it of items{
+        /* intentional */
+      }
       for(const it of items){
         const tileW=baseW, tileH=it.drawHeff;
         let x=0;
