Refactor layout and styling for panels and loading overlay

--- a/index.html
+++ b/index.html
@@ -66,11 +66,16 @@
     box-shadow:0 8px 32px var(--shadow); padding:1.6rem;
   }
   .panel-header{margin-bottom:1rem;border-bottom:2px solid var(--accent-primary);padding-bottom:.7rem;display:flex;justify-content:space-between;align-items:center}
-  .panel-header h2{font-size:1.18rem;font-weight:800;color:var(--text-primary)}
-  #editor-sheet{display:flex;gap:1.6rem;align-items:flex-start}
-  .settings-panel{flex:1;min-width:320px;max-width:480px}
-  .results-panel{flex:2;min-width:420px}
-  .divider{height:1px;background:var(--panel-border);margin:.9rem 0;border:none}
+  #editor-sheet{
+    display:flex;
+    flex-direction:column;
+    gap:2rem;
+    align-items:stretch;
+  }
+  .settings-panel,.results-panel{width:100%;min-width:unset;max-width:none}
+  .settings-panel{flex:1;}
+  .results-panel{flex:2;}
+  .divider{height:1px;background:var(--panel-border);margin:1.2rem 0;border:none}
 
   .input-group{display:flex;flex-direction:column}
   .input-group label{font-size:.93rem;font-weight:700;color:var(--text-primary);margin-bottom:.45rem}
@@ -81,6 +86,7 @@
   .input-wrapper input,.input-wrapper select{
     width:100%; background:transparent; border:none; padding:.8rem 1rem; font-size:1rem; color:var(--text-primary); font-family:var(--font-secondary)
   }
+  .settings-panel .input-group{margin-bottom:1.4rem !important}
 
   .btn{
     display:inline-flex; align-items:center; justify-content:center; gap:.5rem;
@@ -96,7 +102,7 @@
   .btn.active{background:var(--accent-primary); color:#fff; border-color:var(--accent-primary)}
 
   .upload-block{padding:12px;border:1px dashed var(--panel-border);border-radius:12px;background:var(--input-bg)}
-  .thumb-area{overflow:auto;width:100%}
+  .thumb-area{overflow:visible;width:100%}
   .thumb-grid{
     display:grid;
     grid-template-columns: repeat(6, var(--thumb-size));
@@ -123,33 +129,18 @@
   .box h4{margin:0 0 8px}
   canvas{max-width:100%;border:1px dashed var(--panel-border);border-radius:10px;background:transparent}
 
-  /* 로딩 오버레이 */
+  /* 로딩 오버레이 (GIF 크게, 문구는 아래) */
   #loadingOverlay{
     position:fixed; inset:0; display:none;
     align-items:center; justify-content:center;
     background:rgba(0,0,0,.35); z-index:9999; backdrop-filter:blur(1.5px);
-    /* ▼ 추가: GIF를 위, 문구를 아래로 세로 배치 */
-    flex-direction:column;
+    display:none; /* 유지 */
+    flex-direction:column; /* 문구를 아래로 */
     text-align:center;
-    padding:16px;
   }
   #loadingOverlay.show{display:flex}
-
-  /* GIF 크게 (400×268 기준), 비율 유지 */
-  #loadingGif{
-    width:400px;
-    height:auto;
-    aspect-ratio:400/268;
-    max-width:min(90vw, 420px);
-    object-fit:contain;
-    image-rendering:auto;
-    margin-bottom:12px; /* 아래 문구와 간격 */
-  }
-
-  /* 문구: GIF 아래 배치 */
-  #loadingText{
-    font-weight:800;
-  }
+  #loadingGif{width:400px;height:268px;image-rendering:auto}
+  #loadingText{font-weight:800;margin-top:12px} /* 옆이 아니라 아래로 */
 
   @media (max-width:640px){
     body{padding:1rem}
@@ -219,7 +210,7 @@
 
           <hr class="divider" />
 
-          <div class="input-group" style="margin-bottom:.8rem">
+          <div class="input-group">
             <label>합치기 방향</label>
             <div style="display:flex;gap:.5rem;flex-wrap:wrap">
               <button class="btn btn-chip orientBtn active" data-orient="vertical">세로로 합치기</button>
@@ -227,7 +218,7 @@
             </div>
           </div>
 
-          <div class="input-group" style="margin-bottom:.8rem">
+          <div class="input-group">
             <label>가로 크기</label>
             <div style="display:flex;flex-wrap:wrap;gap:.5rem">
               <button class="btn btn-chip widthBtn active" data-width="auto">자동 (가장 큰 사진에 맞춤)</button>
@@ -243,7 +234,7 @@
             <div class="small" id="sizeHint">세로 합치기: 폭 기준 · 가로 합치기: 높이 기준</div>
           </div>
 
-          <div class="input-group" style="margin-bottom:.8rem">
+          <div class="input-group">
             <label>배치 방식</label>
             <div style="display:flex;gap:.5rem;flex-wrap:wrap">
               <button class="btn btn-chip layoutBtn active" data-layout="scale">비율 유지 (기준 크기에 맞춰 자동 스케일)</button>
@@ -251,7 +242,7 @@
             </div>
           </div>
 
-          <div id="padOptions" class="input-group hidden" style="margin-bottom:.8rem">
+          <div id="padOptions" class="input-group hidden">
             <label>정렬 · 배경</label>
             <div style="display:flex; gap:.5rem; flex-wrap:wrap">
               <div class="input-wrapper" style="min-width:140px">
@@ -271,7 +262,7 @@
             </div>
           </div>
 
-          <div class="input-group" style="margin-bottom:.8rem">
+          <div class="input-group">
             <label for="gapInput">이미지 간격</label>
             <div class="input-wrapper">
               <input id="gapInput" type="number" value="0"/><span style="padding:0 12px;color:var(--text-secondary)">px</span>
@@ -285,7 +276,7 @@
               <button class="btn btn-chip fmtBtn" data-format="image/png">PNG</button>
             </div>
           </div>
-          <div id="jpegQualityRow" class="input-group" style="margin-top:.6rem">
+          <div id="jpegQualityRow" class="input-group">
             <label for="qualityInput">JPEG 품질</label>
             <div class="input-wrapper">
               <input id="qualityInput" type="number" min="50" max="100" step="1" value="100"/><span style="padding:0 12px;color:var(--text-secondary)">%</span>
@@ -301,7 +292,7 @@
           <div id="statusLine" class="small" style="margin-top:.6rem"></div>
         </section>
 
-        <!-- 우측 -->
+        <!-- 우측 (이제 아래로 배치됨) -->
         <section class="panel results-panel">
           <div class="panel-header">
             <h2>미리보기</h2>
@@ -395,7 +386,6 @@
 
   const MAX_TOTAL_MB=300;
   const PREVIEW_MAX_H=10000;
-  const SLICE_SRC_H=1024;
 
   let images=[];                    // {src,name,rotation}
   let orient='vertical';
@@ -525,9 +515,6 @@
         });
       }
       const placements=[]; let totalW=baseW, y=0;
-      for(const it of items{
-        /* intentional */
-      }
       for(const it of items){
         const tileW=baseW, tileH=it.drawHeff;
         let x=0;
@@ -638,7 +625,7 @@
         a.download=`merged_${orient}_${ts}.${format==='image/png'?'png':'jpg'}`;
         a.href=URL.createObjectURL(blob);
         a.click();
-        setTimeout(()=>URL.revokeObjectURL(a.href),1200);
+      setTimeout(()=>URL.revokeObjectURL(a.href),1200);
       };
     }catch(err){
       console.error(err); alert('처리 중 오류가 발생했습니다.');
